Re-arranged the footer area to include various menus, fixed spacing with Social icons.

--- a/wp-content/themes/sachtler/style.css
+++ b/wp-content/themes/sachtler/style.css
@@ -771,9 +771,13 @@ footer #facebook-feed {background-color: #ECEDF1;}
 #page-content #intro-text, footer #intro-text {background-color:white;}
 
 footer a {text-decoration:none;color:black;}
+footer .menu li {color:black;}
+footer .menu-item a {color:#7F8C97;}
 footer a:hover {text-decoration:underline;}
 
-footer #facebook-feed .rfb_main_link a {display:inline-block; background:url(images/facebook-logo.png) top right no-repeat; padding-right:50px;height:30px;line-height:30px;font-size:0.8em;margin:2em 0;margin-right: 34px;}
+footer #facebook-feed .rfb_main_link .socialButtons {width: 100%; display: inline-block;}
+
+footer #facebook-feed .rfb_main_link .socialButtons a {display:inline-block; background:url(images/facebook-logo.png) top right no-repeat; padding-right:50px;height:30px;line-height:30px;font-size:0.8em;margin:2em 0;margin-right: 34px;}
 footer #facebook-feed p{margin: 1em 0 0 0;}
 footer #facebook-feed .rfb_image {float:left;margin:0 2% 0 0; width: 16%;}
 footer #facebook-feed .rfb_text {margin-top:0; display: table; float: right; width: 82%;}
@@ -781,13 +785,15 @@ footer #facebook-feed .rfb_text {margin-top:0; display: table; float: right; wid
 footer #facebook-feed a.rfb_link:hover,
 footer #facebook-feed a.rfb_link:hover * { text-decoration: none!important; cursor: text; /*background-color:white; border-radius:3px; color:#818E97; padding:0.25em 0.5em;*/}
 /*footer #facebook-feed a.rfb_link:hover {background-color:#818E97; color:white;text-decoration:none;}*/
-footer #facebook-feed a.twitter-link {padding-left:52px; margin-right: 0; padding-right:0px; background:url(images/twitter-logo.png) top left no-repeat;}
-footer #facebook-feed a.pinterest-link {padding-left:52px; margin-right: 0; padding-right:0px; height:32px; margin: 1.9em 0; background:url(images/pinterest-logo.png) top left no-repeat;}
-footer #facebook-feed a.google-link {padding-left:52px; margin-right: 0; padding-right:0px; background:url(images/google+logo.png) top left no-repeat;}
+footer #facebook-feed .socialButtons a.twitter-link {padding-left:52px; margin-right: 0; padding-right:0px; background:url(images/twitter-logo.png) top left no-repeat;}
+footer #facebook-feed .socialButtons a.pinterest-link {padding-left:52px; margin-right: 0; padding-right:0px; height:32px; margin: 1.9em 0; background:url(images/pinterest-logo.png) top left no-repeat;}
+footer #facebook-feed .socialButtons a.google-link {padding-left:52px; margin-right: 0; padding-right:0px; background:url(images/google+logo.png) top left no-repeat;}
 
 #page-content #intro-text .textwidget, footer #intro-text .textwidget {margin:2em 0; padding-bottom:2em;line-height:1.667em;font-size:1.2em;background:url(images/its-about-you.png) bottom right no-repeat;}
 
 footer #intro-text #copyright {margin:2em 0;}
+#footer-menu {margin:2em 0}
+footer .right {float: right; text-align:right;}
 
 .span12 .span8.center{	margin: 0 auto; display: block;}
 .socialButtons.right{	float: right;}
